--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 logging.level.org.springframework=info
-spring.h2.console.enabled = true 
-spring.datasource.url = jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+#spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.h2.console.enabled=true 
+#spring.h2.console.path=/h2console/
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/aditya
+spring.datasource.username=root
+spring.datasource.password=Mysql@1239
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.h2.console.path=/h2console/
+
